RESOLVED FIXED Bug 59779
Fix IR->SR typo in enum value (and resulting style fails)
https://bugs.webkit.org/show_bug.cgi?id=59779
Summary Fix IR->SR typo in enum value (and resulting style fails)
Mike Lawther
Reported 2011-04-28 22:35:07 PDT
Fix IR->SR typo in enum value (and resulting style fails)
Attachments
Patch (2.76 KB, patch)
2011-04-28 22:35 PDT, Mike Lawther
no flags
Mike Lawther
Comment 1 2011-04-28 22:35:57 PDT
Mike Lawther
Comment 2 2011-04-28 22:37:10 PDT
The real fix here is the typo between the ImageRendering and ShapeRendering enum values. I also de-dented the case statements to fix the resulting style fails.
Ojan Vafai
Comment 3 2011-04-29 08:45:16 PDT
Comment on attachment 91638 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91638&action=review Code change looks fine. Please write a layout test if it's possible. If it's not possible, feel free to remark cq?. > Source/WebCore/css/CSSPrimitiveValueMappings.h:2918 > + case SR_AUTO: > + m_value.ident = CSSValueAuto; > + break; > + case SR_OPTIMIZESPEED: Is it not possible to write a layout test that tests these values? It would be nice to see a test go green here if possible.
Ojan Vafai
Comment 4 2011-04-29 08:46:22 PDT
Comment on attachment 91638 [details] Patch Oh. nm. I see now that the enum values are actually the same.
WebKit Commit Bot
Comment 5 2011-04-29 09:15:47 PDT
Comment on attachment 91638 [details] Patch Clearing flags on attachment: 91638 Committed r85327: <http://trac.webkit.org/changeset/85327>
WebKit Commit Bot
Comment 6 2011-04-29 09:15:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.