2011-04-29  Mike Lawther  <mikelawther@chromium.org>

Reviewed by Ojan Vafai.

        Fix IR->SR typo in enum value (and resulting style fails)
        https://bugs.webkit.org/show_bug.cgi?id=59779

        No functionality change, so no new tests

        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator EShapeRendering):

Canonical link: https://commits.webkit.org/75033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85327 268f45cc-cd09-0410-ab3c-d52691b4dbfc